--- a/src/components/Form/input/style.module.scss
+++ b/src/components/Form/input/style.module.scss
@@ -1,6 +1,7 @@
-.inputContainer{
+.inputContainer {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 8px;
-}
+    align-items: center;
+  }
