--- a/src/components/Header/HeaderRegister/style.module.scss
+++ b/src/components/Header/HeaderRegister/style.module.scss
@@ -11,9 +11,9 @@
     margin-bottom: 31px;
     padding: 10px;
     width: 100%;
-    max-width: 370px;
+    max-width: 23.125rem;
 }
 
 .buttonReturn{
-    max-width: 80px;
+    max-width: 5rem;
 }
