--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,7 +1,7 @@
 .btn{
     background-color: var(--color-primary);
     color: var(--white);
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     border-radius: 4px;
     width: 100%;
