--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -2,7 +2,7 @@
     border-radius: 3.209px;
     background: var(--grey-3);
     box-shadow: 0px 3px 32px -8px rgba(0, 0, 0, 0.25);
-    max-width: 370px;
+    max-width: 23.125rem;
     padding: 33px 17px;
     display: flex;
     flex-direction: column;
