--- a/src/styles/typograph.scss
+++ b/src/styles/typograph.scss
@@ -1,16 +1,16 @@
 .title1{
     font-weight: bold;
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .title2{
     font-weight: bold;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .headline{
     font-weight: normal;
-    font-size: 12px;
+    font-size: .75rem;
     color: var(--grey-0);
 
     &.bold{
@@ -24,5 +24,5 @@
 
 .paragraph{
     font-weight: normal;
-    font-size: 16px;
+    font-size: 1rem;
 }
