feat(crud): implementar o R do CRUD
Exibir a lista na tela e estilizar tanto a lista quanto o card.

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -25,4 +25,20 @@
             background-color: var(--grey-2);
         }
     }
+
+    &.grey2{
+        background-color: var(--grey-3);
+
+        &:hover{
+            background-color: var(--grey-2);
+        }
+    }
+
+    &.grey3{
+        background-color: var(--grey-4);
+
+        &:hover{
+            background-color: var(--grey-3);
+        }
+    }
 }
