style(modal): aplicar estilos ao modal de adição de tecnologia
Adiciona os estilos ao modal add.

--- a/src/components/Form/input/style.module.scss
+++ b/src/components/Form/input/style.module.scss
@@ -1,7 +1,14 @@
-.inputContainer {
+.inputContainerCenter {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 8px;
     align-items: center;
-  }
+}
+
+.inputContainer{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
