feat(crud): implementar o create do CRUD de posts
Criar, salvar e exibir os novos posts.

--- a/src/components/PostList/style.module.scss
+++ b/src/components/PostList/style.module.scss
@@ -16,4 +16,7 @@
 .listContainer{
     background-color: var(--grey-3);
     padding: 16px 9px;
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
 }
