style(desktop): aplicar estilos específicos para a versão de desktop
Adicionar estilos que são otimizados para a visualização em telas maiores e dispositivos de desktop.

--- a/src/components/PostList/PostCard/style.module.scss
+++ b/src/components/PostList/PostCard/style.module.scss
@@ -17,3 +17,15 @@
     display: flex;
     gap:8px;
 }
+
+@media (min-width: 600px) {
+    .cardContainer{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .btnContainer{
+        align-items: center;
+    }
+}
