--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -36,3 +36,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media (min-width:600px) {
+    .modalBox{
+        max-width: 369px;
+    }
+}
